--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-group=com.peer39
+group=com.test.automation
 version=1.0-SNAPSHOT
-name=Peer39 tested-service tests
-systemProp.env=stg
+name=mock service test
+systemProp.env=localhost
 allurePluginVersion=2.8.1
