--- a/src/test/resources/allure.properties
+++ b/src/test/resources/allure.properties
@@ -1,2 +1,2 @@
 allure.results.directory=build/allure-results
-allure.link.issue.pattern=https://newpeer39.atlassian.net/browse/{}
+allure.link.issue.pattern=https://some.domain.atlassian.net/browse/{}
