cleanup + default env change

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 group=com.test.automation
 version=1.0-SNAPSHOT
 name=mock service test
-systemProp.env=localhost
+systemProp.env=stg
 allurePluginVersion=2.8.1
